Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23366

ROUND(18446744073709551615,rand()*0) returns a wrong result

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
    • 10.4.14, 10.5.5
    • Data types
    • None

    Description

      SELECT
        ROUND(18446744073709551615,rand()*0) AS c1,
        ROUND(18446744073709551615.0,rand()*0) AS c2;
      

      +----------------------+------------------------+
      | c1                   | c2                     |
      +----------------------+------------------------+
      | 18446744073709552000 | 18446744073709551615.0 |
      +----------------------+------------------------+
      

      The result for c1 is wrong. It should be equal to 18446744073709551615, like c2, just without the '.0' part.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: